# SG-Project

.github/workflows/: main.yml
App/: Viettrix.py
App PC/: Camera.py  GUI.py  MenuBar.py
ROS2/Arduino/sketch_jul14a/: sketch_jul14a.ino
ROS2/install/: local_setup.sh  setup.sh
ROS2/log/: latest_build
ROS2/src/python_pkg/: model_to_pacakge.py  package.xml  setup.py
ROS2/src/python_pkg/launch/: fix_dae_transparency.py  ign_gazebo.launch.py
ROS2/src/python_pkg/urdf/meshes/: assem2_component008_piwc6e.dae  assem2_component009_1m8g3o.dae  assem2_component010_xuasif.dae  assem2_component011_x6lyi6.dae  assem2_component013_xkbtpb.dae  assem2_component3_keuldv.dae  assem2_component5_usjylo.dae  assem2_frame003_301pnj.dae  assem2_frame004_cjnhmb.dae  assem2_frame005_anuq6v.dae  assem2_frame006_lbnbg2.dae  assem2_frame009_fvn2bw.dae  assem2_frame010_ckf0cr.dae  assem2_frame011_4fykzd.dae  assem2_frame012_v4ynyz.dae  assem2_frame014_zslmgk.dae  assem2_frame016_i7txbl.dae  assem2_frame017_gu3wnv.dae  assem2_newfrontwheelv3_qklj1m.dae  assem2_simplefrontwheelsteering2v3_a7kkrv.dae  assem2_simplefrontwheelsteering4v005_esg1w7.dae  assem2_simplerearwheel001_b0zbxk.dae  assem2_simplerearwheel_hfbdem.dae
Sever/back end/: Raspberry.py  Testmotor.py  client.py
Sever/front end/: package-lock.json  package.json  tsconfig.app.json
Sever/front end/src/: App.tsx
Sever/front end/src/components/: StatCard.tsx
Sever/front end/src/layout/: Header.tsx  Sidebar.tsx
Sever/front end/src/pages/: Analytics.tsx  Home.tsx
Website/back end/: Testmotor.py
(+53 files in other folders)
