<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="huy250704@gmail.com">mhhy2507</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_index_python</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
